<resources>
    <string name="app_name">My Clock</string>
    <string name="welome_to_clock_app">Welome to Clock App</string>
    <string name="forward">Forward</string>
    <string name="current_time">Current Time</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="minutes">Minutes</string>
    <string name="set">Set</string>
    <string name="_00_00">00:00</string>
    <string name="reset">reset</string>
    <string name="Start">TODO</string>
    <string name="Startt">start</string>
    <string name="no_cardetails">Click on the button below to begin creating your Alarm!</string>
    <string name="title_activity_add_reminder">Add Reminder</string>
    <string name="title_activity_edit_reminder">Edit Reminder</string>
    <string name="title_activity_licenses">Licenses</string>

    <string name="add_reminder">Reminder</string>
    <string name="details">Details</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_off">Off</string>
    <string name="repeat_no">Repetition Interval </string>
    <string name="repeat_type">Type of Repetitions</string>

    <string name="action_discard_reminder">Discard Reminder</string>
    <string name="action_save_reminder">Save Reminder</string>
    <string name="editor_activity_title_new_reminder">Add Reminder Details</string>
    <string name="editor_activity_title_edit_reminder">Edit Reminder</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this Reminder?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_reminder_successful">Reminder deleted</string>
    <string name="editor_delete_reminder_failed">Error with deleting reminder</string>
    <string name="editor_insert_reminder_successful">Reminder saved</string>
    <string name="editor_insert_reminder_failed">Error with saving reminder</string>
    <string name="editor_update_reminder_successful">Reminder updated</string>
    <string name="editor_update_reminder_failed">Error with updating reminder</string>
    <string name="reminder_title">AlarmReminder</string>
    <string name="my_clock">My_Clock</string>
</resources>