<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_text_input"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/text_view_countdown"
        android:layout_centerHorizontal="true"
        android:hint="@string/minutes"
        android:inputType="number"
        android:maxLength="4"
        android:autofillHints="" />
    <Button
        android:id="@+id/button_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/edit_text_input"
        android:layout_toEndOf="@+id/edit_text_input"
        android:text="@string/set"
        android:layout_toRightOf="@+id/edit_text_input" />

    <TextView
        android:id="@+id/text_view_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/_00_00"
        android:textColor="@android:color/primary_text_dark_nodisable"
        android:textSize="60sp" />
    <ImageButton
        android:id="@+id/button_start_pause"
        android:src="@drawable/play_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_countdown"
        android:layout_centerHorizontal="true"
        android:text="@string/Startt"
        android:contentDescription="@string/Start" />

    <ImageButton
        android:id="@+id/button_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_countdown"
        android:layout_marginStart="11dp"
        android:layout_marginLeft="11dp"
        android:layout_toEndOf="@+id/button_start_pause"
        android:layout_toRightOf="@+id/button_start_pause"
        android:contentDescription="@string/stop"
        android:src="@drawable/stop_arrow"
        android:text="@string/reset"
        android:visibility="invisible"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/dashback"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="178dp"
        android:layout_marginLeft="178dp"
        android:layout_marginEnd="177dp"
        android:layout_marginRight="177dp"
        android:layout_marginBottom="15dp"
        android:background="#FFFFFF"
        android:baselineAlignBottom="false"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"
        app:srcCompat="@drawable/pattern" />
</RelativeLayout>